--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="header-title">
           <div class="row text-center">
             <div class="col">
-              <h3>Pham Quang Thien (6 Thien) - Full Stack Software Engineer</h3>
+              <h3>Pham Quang Thien - Full Stack Software Engineer</h3>
               <p>
                 Phone: +84 867857838 / Email:
                 phamquangthien.syntaxerror@gmail.com
@@ -117,6 +117,48 @@
                 <h4>04/2022 - Now</h4>
               </div>
 
+              <div class="title-1">
+                <h4>
+                  Project:
+                  <p>Underwriting(UND) - (5 member full stack)</p>
+                </h4>
+
+                <ul>
+                  <li>
+                    <div class="title-1">
+                      <h5>
+                        Description:
+                        <p>Underwriting system for customers</p>
+                      </h5>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="title-1">
+                      <h5>
+                        Technologies:
+                        <ul>
+                          <li>
+                            Legace front-end project: Vuejs + Vuetify + Vuex
+                          </li>
+                          <li>Back-end: Java(Spring-boot) , Oracle</li>
+                        </ul>
+                      </h5>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="title-1">
+                      <h4>
+                        Responsibilities
+                        <ul>
+                          <li>Connect 3rd party service to check customer information</li>
+                          <li>Check customer information from internal</li>
+                          <li>Change flow,report, ftp</li>
+                        </ul>
+                      </h4>
+                    </div>
+                  </li>
+                </ul>
+              </div>
               <div class="title-1">
                 <h4>
                   Project:
@@ -468,8 +510,7 @@
               <h3 style="margin: 0">EDUCATION</h3>
               <div class="title-1">
                 <h4>
-                  University of Science - HO CHI MINH City:
-                  <p>9/2017 - 9/2020</p>
+                  University of Science - HO CHI MINH City
                 </h4>
               </div>
             </div>
